--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,12 @@
 p{
-    font-weight: 350px;
-    font-size: 220px;
-padding:top 15px ,left 10px,bottom 20px,right 10px;
+    width: 350px;
+    height: 220px;
+padding: 15px 10px 20px 10px ;
     margin-bottom: 30px;
     border-width:2px;
     border-style:dashed;
     background-color: darkgreen;
+    box-sizing: border-box;
+    margin-top: 0;
     
 }
